<resources>
    <string name="app_name">GDrive</string>
    <string name="google_geocoding_api_key">AIzaSyCWthEdssZK0duO4E1zp0-mSd0LfNNq3v0</string>
    <string name="t_map_api_key">70a342d1-f27b-3dcc-8b75-840f56e68e5d</string>
    <string name="juso_api_key">U01TX0FVVEgyMDE3MDYwODE0NTYxNzIxNzM4</string>

    <string name="title_msg_none_service">현재 카쉐어링 서비스를 이용하고 있지 않습니다.</string>
    <string name="title_msg_warning_title">운전 중 시스템 조작은\n매우 위험합니다.</string>
    <string name="title_msg_warning_guide">본 시스템의 안내 사항은\n실제 도로 상황과 다를 수 있습니다.</string>
    <string name="title_msg_turn_on_gps">기기의 GPS설정이 꺼져있습니다.\n설정화면으로 이동하시겠습니까?</string>
    <string name="title_msg_press_back_again_to_exit">한번 더 누르면 앱이 종료됩니다.</string>
    <string name="title_msg_empty_result">검색결과가 없습니다.\n주소를 다시한번 확인해 주세요.</string>
    <string name="title_msg_ask_add_way_point_format">목적지(%1$skm)까지 예상 주행 가능 거리(%2$s)로 갈 경우\n방전의 위험이 있습니다. 충전소 경유지를 탐색하시겠습니까?\n취소 시 기존 경로대로 안내합니다.</string>

    <string name="title_retry">다시시도</string>
    <string name="title_submit">확인</string>
    <string name="title_cancel">취소</string>
    <string name="title_yes">네</string>
    <string name="title_no">아니요</string>
    <string name="title_map">지도</string>
    <string name="title_remain_time">잔여시간</string>
    <string name="title_start">시작</string>
    <string name="title_end">종료</string>
    <string name="title_enable_distance">주행가능거리</string>
    <string name="title_air_condition">공기상태 (ppm)</string>
    <string name="title_charge_info">전기차 충전소 안내</string>
    <string name="title_charge_name">충전소 위치 명</string>
    <string name="title_distance">거리</string>
    <string name="title_distance_format">%1$skm</string>
    <string name="title_charge_status">충전 가능 여부</string>
    <string name="title_chargeable">충전 가능</string>
    <string name="title_charging_other">다른차량 충전중</string>
    <string name="title_parking_other">다른차량 주차중(충전x)</string>
    <string name="title_charge_unusable">사용할 수 없음(충전기 고장)</string>
    <string name="title_o">O</string>
    <string name="title_x">X</string>
    <string name="title_search">검색</string>
    <string name="title_search_result">검색결과</string>
    <string name="title_search_count_format">총 %1$s건</string>
    <string name="title_search_hint">목적지를 입력하세요</string>
    <string name="title_lead_time">소요시간</string>
    <string name="title_lead_time_format">약 %1$s</string>
    <string name="title_optimum_distance">최적거리</string>
    <string name="title_optimum_distance_format">약 %1$skm</string>
    <string name="title_expect_consume">예상소모율 - 예상소모량</string>
    <string name="title_expect_consume_format">약 %1$s%% - %2$skW</string>
    <string name="title_remain_battery">도착 후 배터리 잔량 - 거리</string>
    <string name="title_remain_battery_format">%1$s%% - %2$skm</string>
    <string name="title_find_path">경로안내</string>

    <string name="title_co">CO</string>
    <string name="title_co2">CO2</string>
    <string name="title_alcohol">Alcohol</string>
    <string name="title_temp_humi">온·습도</string>
    <string name="title_temp_humi_format">%1$s\u2103·%2$s%%</string>


    <string name="title_minute">분</string>
    <string name="title_hour">시간</string>

    <string name="error_timeout">요청시간이 초과되었습니다.</string>
    <string name="error_no_connection">인터넷 연결상태를 확인해주세요.</string>
    <string name="error_no_network">네트워크 상태를 확인해주세요.</string>
    <string name="error_no_server">서버에 오류가 있습니다.</string>
    <string name="error_no_unexpected">정의되지 않은 에러입니다.</string>
    <string name="error_no_cannot_found_google_play">구글 플레이를 찾을 수 없습니다.</string>
    <string name="error_no_require_install_t_map">T-Map을 설치해주세요.</string>
    <string name="error_no_location_permission_not_granted">앱 위치서비스 접근에 동의하셔야합니다</string>
    <string name="error_no_cannot_found_t_map">T map이 설치되어있지 않습니다.</string>



    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>


    <string name="setting_time">시간설정</string>
</resources>
