<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.fragment.ChargeListDialogFragment">

    <FrameLayout
        android:id="@+id/charge_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="384dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/colorDarkGreyD9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <kr.co.tmonet.gdrive.view.NotoTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_charge_info"
                    android:textColor="@color/colorSkyBlue"
                    android:textSize="26sp"
                    app:fontStyle="bold"/>

                <ImageView
                    android:id="@+id/close_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="34dp"
                android:orientation="horizontal">

                <kr.co.tmonet.gdrive.view.NotoTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/title_charge_name"
                    android:textColor="@color/colorSkyBlue"
                    android:textSize="18sp"
                    app:fontStyle="demilight"/>

                <kr.co.tmonet.gdrive.view.NotoTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/title_distance"
                    android:textColor="@color/colorSkyBlue"
                    android:textSize="18sp"
                    app:fontStyle="demilight"/>

                <kr.co.tmonet.gdrive.view.NotoTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/title_charge_status"
                    android:textColor="@color/colorSkyBlue"
                    android:textSize="18sp"
                    app:fontStyle="demilight"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:background="@color/colorSkyBlue"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/charge_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorSkyBlue"/>

        </LinearLayout>
    </FrameLayout>
</layout>