<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.fragment.AlertDialogFragment">

    <FrameLayout
        android:id="@+id/alert_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="666dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_white_bg_top_radius12"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="34dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_warning_triangle_89_x_74"/>

                <kr.co.tmonet.gdrive.view.NotoTextView
                    android:id="@+id/alert_message_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:gravity="center"
                    android:text="@string/title_msg_ask_add_way_point_format"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    app:fontStyle="medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <kr.co.tmonet.gdrive.view.NotoTextView
                    android:id="@+id/submit_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_red_left_bottom_radius12"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/title_submit"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    app:fontStyle="bold"/>

                <kr.co.tmonet.gdrive.view.NotoTextView
                    android:id="@+id/cancel_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_grey_right_bottom_radius12"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/title_cancel"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    app:fontStyle="bold"/>

            </LinearLayout>


        </LinearLayout>


    </FrameLayout>

</layout>