<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/before_search_layout"
            android:layout_width="480dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_dark_bg_bottom_radius12"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/search_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_white_bg_radius4"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:src="@drawable/ic_search"/>

                <kr.co.tmonet.gdrive.view.NotoTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_search"
                    android:textColor="@color/colorBlack40"
                    android:textSize="18sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/after_search_layout"
            android:layout_width="480dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="480dp"
                android:layout_height="wrap_content"
                android:background="@color/colorDark97"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_white_bg_radius4"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:src="@drawable/ic_search"/>

                    <kr.co.tmonet.gdrive.view.NotoTextView
                        android:id="@+id/search_result_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack70"
                        android:textSize="18sp"
                        tools:text="서울특별시 마포구 동교로17길 7"/>

                    <ImageView
                        android:id="@+id/search_clear_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="12dp"
                        android:src="@drawable/ic_search_clear"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorDarkBlueGrey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <kr.co.tmonet.gdrive.view.NotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_lead_time"
                            android:textColor="@color/colorWhite70"
                            android:textSize="16sp"/>

                        <kr.co.tmonet.gdrive.view.NotoTextView
                            android:id="@+id/lead_time_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            app:fontStyle="bold"
                            tools:text="약 40분"/>

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="40dp"
                        android:alpha="0.26"
                        android:background="@color/colorWhite"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <kr.co.tmonet.gdrive.view.NotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_optimum_distance"
                            android:textColor="@color/colorWhite70"
                            android:textSize="16sp"/>

                        <kr.co.tmonet.gdrive.view.NotoTextView
                            android:id="@+id/distance_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            app:fontStyle="bold"
                            tools:text="총 24km"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorDarkBlueGrey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <kr.co.tmonet.gdrive.view.NotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_expect_consume"
                            android:textColor="@color/colorWhite70"
                            android:textSize="16sp"/>

                        <kr.co.tmonet.gdrive.view.NotoTextView
                            android:id="@+id/consume_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            app:fontStyle="bold"
                            tools:text="85% - 45kW"/>

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="40dp"
                        android:alpha="0.26"
                        android:background="@color/colorWhite"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <kr.co.tmonet.gdrive.view.NotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_remain_battery"
                            android:textColor="@color/colorWhite70"
                            android:textSize="16sp"/>

                        <kr.co.tmonet.gdrive.view.NotoTextView
                            android:id="@+id/battery_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            app:fontStyle="bold"
                            tools:text="12%"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <kr.co.tmonet.gdrive.view.NotoButton
                android:id="@+id/find_path_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="480dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_red_bg_radius12"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:padding="14dp"
                android:text="@string/title_find_path"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:btnFontStyle="bold"/>

        </LinearLayout>
    </LinearLayout>
</layout>