<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.fragment.SearchAddressDialogFragment">

    <FrameLayout
        android:id="@+id/search_address_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="720dp"
            android:layout_height="1084dp"
            android:layout_gravity="top|start"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/shape_dark_bg_bottom_radius12"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_white_bg_radius4"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:src="@drawable/ic_search"/>

                    <kr.co.tmonet.gdrive.view.NotoEditText
                        android:id="@+id/search_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/title_search_hint"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack70"
                        android:textColorHint="@color/colorBlack40"
                        android:textSize="18sp">

                        <requestFocus/>
                    </kr.co.tmonet.gdrive.view.NotoEditText>

                    <ImageView
                        android:id="@+id/search_clear_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:src="@drawable/ic_search_clear"/>
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/result_count_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <kr.co.tmonet.gdrive.view.NotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_search_result"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"/>

                    <kr.co.tmonet.gdrive.view.NotoTextView
                        android:id="@+id/result_count_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSkyBlue"
                        android:textSize="24sp"
                        app:fontStyle="bold"
                        tools:text="총 6건"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/close_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="74dp"
                    android:layout_marginStart="74dp"
                    android:src="@drawable/ic_close"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="12dp"
                android:background="@color/colorDarkBlueGrey"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/search_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/empty_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="324dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_empty_result_103_x_103"/>

                    <kr.co.tmonet.gdrive.view.NotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:gravity="center"
                        android:text="@string/title_msg_empty_result"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        app:fontStyle="demilight"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</layout>